# HomeW_27

./: pyproject.toml  requirements.txt
