[tool.poetry]
name = "homew-27"
version = "0.1.0"
description = ""
authors = ["S_Kri <s_krivosheya@mail.ru>"]
readme = "README.md"
packages = [{include = "homew_27"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
